--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 REACT_APP_BASE_URL=#######
-REACT_APP_API_URL=#########
+REACT_APP_API_URL=https://howtosell-server-es73l4yx8-umutplvns-projects.vercel.app/api
