--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-REACT_APP_BASE_URL=#######
-REACT_APP_API_URL=https://howtosell-server-es73l4yx8-umutplvns-projects.vercel.app/api
+REACT_APP_BASE_URL=https://howtosell-server-v.vercel.app
+REACT_APP_API_URL=https://howtosell-server-v.vercel.app/api
+
