--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_BASE_URL=https://howtosell-server-v.vercel.app
-REACT_APP_API_URL=https://howtosell-server-v.vercel.app/api
+REACT_APP_BASE_URL=https://howtosell-server-v2-2kdfsvutt-umutplvns-projects.vercel.app
+REACT_APP_API_URL=https://howtosell-server-v2-2kdfsvutt-umutplvns-projects.vercel.app/api
 
